--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2341,7 +2341,7 @@ body.is-touch .main {
 }
 
 #intro-div{
-  background: url("../../my_images/intro.jpeg");
+  background: url("../../my_images/Intro.jpeg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -2419,7 +2419,7 @@ body.is-touch .main {
 
 
 #intro-div {
-  background: url("../../my_images/intro.jpeg");
+  background: url("../../my_images/Intro.jpeg");
   background-size: cover;
   background-position: -150px;
   background-repeat: no-repeat;
