--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2337,11 +2337,11 @@ body.is-touch .main {
 /* Intro */
 
 #intro , #one, #two, #three  {
-  background-color: rgba(0, 0, 0, 0.795);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 #intro-div{
-  background: url("../../my_images/Intro.jpeg");
+  background: url("../../my_images/Intro2.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
