--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2419,7 +2419,7 @@ body.is-touch .main {
 
 
 #intro-div {
-  background: url("../../my_images/Intro3.jpeg");
+  background: url("../../my_images/Intro3.jpg");
   background-size: cover;
   background-position: -150px;
   background-repeat: no-repeat;
